--- a/App/package.json
+++ b/App/package.json
@@ -13,9 +13,12 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@iconify/svelte": "^4.0.2",
 		"@sveltejs/adapter-auto": "^3.2.2",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
+		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"gray-matter": "^4.0.3",
 		"mdsvex": "^0.11.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
