--- a/App/package.json
+++ b/App/package.json
@@ -25,7 +25,8 @@
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-preprocess": "^6.0.2",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"yaml": "^2.5.0"
 	},
 	"type": "module"
 }
