--- a/App/package.json
+++ b/App/package.json
@@ -22,6 +22,8 @@
 		"mdsvex": "^0.11.2",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"remark-autolink-headings": "^7.0.1",
+		"remark-slug": "^7.0.1",
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-preprocess": "^6.0.2",
