fix(/): low-poly anime

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"moduleResolution": "bundler",
 		"useUnknownInCatchVariables": false,
 		"allowImportingTsExtensions": true,
-		"noImplicitAny": false,
+		"noImplicitAny": false
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
